Add configuration change nemesis. Separate dvalue and dmap testing.